# keiziban

./: Cargo.toml  diesel.toml  readme.md
chan-core/: Cargo.toml
chan-core/src/: graphql.rs  lib.rs  schema.rs
chan-core/src/handler/: mod.rs
chan-core/src/model/: board.rs  log.rs  mod.rs  system_info.rs  thread.rs  threadpost.rs  token.rs  user.rs
chan-core/src/search_engine/: mod.rs
chan-core/tests/: token.rs
chan-graphql-client/: Cargo.toml  schema.graphql
chan-graphql-client/query/: board_by_id.graphql  boards.graphql  change_user_type.graphql  child_threads_by_board_id.graphql  create_board.graphql_  create_thread.graphql  get_system_info.graphql  login.graphql  logs_range.graphql  post_threadpost.graphql  registration.graphql  remove_thread.graphql  remove_threadpost.graphql  search_top_k.graphql  thread_by_id.graphql  threadposts_range.graphql  user_by_id.graphql
chan-graphql-client/src/: lib.rs
chan-main/: Cargo.toml
chan-main/src/: main.rs
chan-main/static/css/: blood.css  dawn.css  default.css  refrain.css
chan-web/: Cargo.toml
chan-web/src/: lib.rs
chan-web/src/constant/: mod.rs
chan-web/src/middleware/: logincheck.rs  mod.rs
chan-web/src/route/: log.rs  login.rs  logout.rs  manage.rs  mod.rs  redirect.rs  register.rs  root.rs  rules.rs  search.rs  system_info.rs  theme.rs
chan-web/src/route/board/: creation.rs  list.rs  mod.rs  view.rs
chan-web/src/route/thread/: creation.rs  mod.rs  removal.rs  view.rs
chan-web/src/route/threadpost/: creation.rs  mod.rs  removal.rs
chan-web/src/route/user/: change.rs  mod.rs  view.rs
chan-web/src/utility/: mod.rs
chan-web/templates/: base.html  board_creation.html  board_list.html  log.html  login.html  manage.html  redirect.html  register.html  root.html  rules.html  search.html  search_result.html  system_info.html
chan-web/templates/board/: view.html
chan-web/templates/thread/: view.html
chan-web/templates/user/: view.html
db-init/: Cargo.toml
db-init/src/: main.rs
migrations/2022-03-16-103409_create_users/: up.sql
migrations/2022-03-19-024000_create_boards/: down.sql  up.sql
migrations/2022-03-19-024504_create_threads/: up.sql
migrations/2022-03-20-063504_create_threadposts/: down.sql  up.sql
migrations/2022-05-18-143900_create_logs/: down.sql  up.sql
