[package]
name = "chan-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
rust-argon2 = "1.0.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = {version="1",features=["full"]}
async-graphql ={version="3.0.37",features=["uuid","chrono"]}
async-graphql-actix-web = "3.0.37" 
diesel = { version="1.4.8", features = ["postgres","r2d2","chrono","uuidv07"] }
actix-web = {version="4",features=["openssl","secure-cookies"]}
uuid = {version="0.8.2",features=["v4"]}
chrono ={version= "0.4.19",features=["serde"]}
#dotenv = "0.15.0"
num-traits = "0.2"
num-derive = "0.3"
tracing = "0.1.32"
tantivy = "0.17.0"
anyhow = "1.0.56"
random-string = "1.0"
systemstat = "0.1.11"


[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = "0.3.4"
