[package]
name = "chan-graphql-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10.0"
serde = {version = "1.0", features = ["derive"] }
uuid = "0.8.2"
chrono ={version= "0.4.19",features=["serde"]}
