[package]
name = "chan-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.35"
async-graphql-actix-web = "3.0.35" 
actix-web = {version="4",features=["openssl","secure-cookies"]}
tokio = {version="1",features=["full"]}
chan-core={path="../chan-core"}
dotenv = "0.15.0"
diesel = { version="1.4.8", features = ["postgres","r2d2","chrono","uuidv07"] }

chan-web={path="../chan-web"}

tracing-subscriber = {version="0.3.*",features=["env-filter"]}
tracing = "0.1.32"

reqwest = {version="0.11.10",features=["json"]}
actix-files = "0.6.0-beta.16"
actix-session = "0.5.0-beta.8"
actix-identity = "0.4.0-beta.8"
actix-web-flash-messages = {version="0.3.1",features=["cookies"]}
anyhow = "1.0.56"
actix-extensible-rate-limit = "0.2.1"