[package]
name = "chan-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4",features=["openssl","secure-cookies"]}
askama = {version="0.11.1",features=["with-actix-web"]}
askama_actix = "0.13.0"
actix-session = "0.5.0-beta.8"
actix-identity = "0.4.0-beta.8"
actix-web-flash-messages = {version="0.3.1",features=["cookies"]}
serde = {version = "1.0", features = ["derive"] }
chan-graphql-client={path="../chan-graphql-client"}
chan-core={path="../chan-core"}
reqwest = {version="0.11.10",features=["json"]}
graphql_client = {version="0.10.0",features=["reqwest"]}
tracing = "0.1.32"
futures = "0.3.21"
futures-util = "0.3.21"
uuid = {version="0.8.2",features=["v4"]}
chrono ={version= "0.4.19",features=["serde"]}
anyhow = "1.0.56"
uom = "0.32.0"